--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 body {
     --slack-color: #3f0f40;
     --slack-secondary: #49274b;
+    --slack-hover: #340e36;
+}
+
+.app_body {
+    display: flex;
+    height: 100vh;
 }
