--- a/src/Header.css
+++ b/src/Header.css
@@ -38,7 +38,7 @@
 .header__right {
     flex: .3;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .header__right > .MuiSvgIcon-root {
