--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -3,6 +3,8 @@
     border-top: 1px solid var(--slack-secondary);
     max-width: 260px;
     color: white;
+    max-width: 260px;
+    flex: 0.3;
 }
 
 .sidebar__header {
@@ -42,4 +44,9 @@
     font-size: 18px;
     background-color: white;
     border-radius: 99px;
+}
+
+.sidebar > hr {
+    margin: 10px 0;
+    border: 1px solid var(--slack-secondary)
 }
